--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html,
 body {
 	margin: 0;
 	padding: 0;
-	/* background: rgb(41, 41, 41); */
+	background: rgb(255, 255, 255);
 	overflow: auto;
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
