--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,6 @@
 .fade-appear-active,
 .fade-enter.fade-enter-active {
 	opacity: 1;
-	transition: opacity 400ms linear 150ms;
 }
 
 .fade-exit {
@@ -21,10 +20,18 @@
 
 .dark-mode {
 	filter: invert(0.85) hue-rotate(160deg);
+	transition: all 3s ease-in forwards;
 }
 
-.invert {
-	filter: invert(1) hue-rotate(180deg);
+.toggle {
+	position: absolute;
+	background: transparent;
+	border: solid 2px black;
+	margin: 1rem;
+	border-radius: 50px;
+	padding: 0.5rem;
+	outline: none;
+	cursor: pointer;
 }
 
 .confirm-new {
