--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 
 .toggle {
   position: absolute;
-  background: transparent;
+  background: white;
   border: solid 2px black;
   margin: 1rem;
   border-radius: 50px;
@@ -39,6 +39,22 @@
 }
 
 .toggle:hover {
+  border: solid 1px black;
+}
+
+.auth-link {
+  position: absolute;
+  background: white;
+  border: solid 2px black;
+  margin: 1rem;
+  border-radius: 50px;
+  padding: 0.5rem;
+  outline: none;
+  right: 1rem;
+  cursor: pointer;
+}
+
+.auth-link:hover {
   border: solid 1px black;
 }
 
@@ -93,7 +109,11 @@
   background-color: #fdfdfd;
   display: -ms-grid;
   display: grid;
-  place-items: center;
+      grid-template-areas: "back title" "username username" "password password" "submit submit";
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -106,25 +126,90 @@
   width: 50rem;
 }
 
+.auth-holder .auth-back-button {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: back;
+  background: white;
+  border: none;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 50%;
+  font-size: 2rem;
+  height: 3rem;
+  width: 3rem;
+  outline: none;
+  cursor: pointer;
+  justify-self: start;
+  margin-left: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.auth-holder .auth-back-button .button-link {
+  color: black;
+}
+
+.auth-holder .auth-back-button .button-link:hover {
+  -webkit-transition: 0.00001s ease;
+  transition: 0.00001s ease;
+  color: gray;
+}
+
+.auth-holder .title {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: title;
+  margin-left: -35rem;
+}
+
 .auth-holder .input {
   font-family: inherit;
   text-align: center;
-  margin: 1rem 0;
+  margin: 1rem 0 1rem 12rem;
   padding: 1rem;
   border-radius: 50px;
   border: solid 2px black;
   outline: none;
 }
 
+.auth-holder .user {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: username;
+}
+
+.auth-holder .password {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: password;
+}
+
 .auth-holder .submit {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: submit;
   font-family: inherit;
-  background: transparent;
+  background: white;
+  border: none;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 50px;
-  border: solid 2px black;
-  padding: 0.5rem;
+  padding: 1rem;
   cursor: pointer;
   outline: none;
-  margin-left: 33%;
+  margin: 1rem 0 0 15rem;
+}
+
+.auth-holder .submit:hover {
+  background: #e4e4e4;
 }
 
 /* x Auth Screen x */
