--- a/src/App.scss
+++ b/src/App.scss
@@ -25,12 +25,28 @@
 
 .toggle {
 	position: absolute;
-	background: transparent;
+	background: white;
 	border: solid 2px black;
 	margin: 1rem;
 	border-radius: 50px;
 	padding: 0.5rem;
 	outline: none;
+	cursor: pointer;
+
+	&:hover {
+		border: solid 1px black;
+	}
+}
+
+.auth-link {
+	position: absolute;
+	background: white;
+	border: solid 2px black;
+	margin: 1rem;
+	border-radius: 50px;
+	padding: 0.5rem;
+	outline: none;
+	right: 1rem;
 	cursor: pointer;
 
 	&:hover {
@@ -86,7 +102,13 @@
 .auth-holder {
 	background-color: rgb(253, 253, 253);
 	display: grid;
-	place-items: center;
+	grid-template-areas:
+		"back title"
+		"username username"
+		"password password"
+		"submit submit";
+	justify-items: center;
+	align-items: center;
 	position: absolute;
 	left: 50%;
 	top: 50%;
@@ -96,25 +118,70 @@
 	height: 31rem;
 	width: 50rem;
 
+	.auth-back-button {
+		grid-area: back;
+		background: white;
+		border: none;
+		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+		border-radius: 50%;
+		font-size: 2rem;
+		height: 3rem;
+		width: 3rem;
+		outline: none;
+		cursor: pointer;
+		justify-self: start;
+		margin-left: 1.5rem;
+		display: flex;
+		align-items: center;
+
+		.button-link {
+			color: black;
+
+			&:hover {
+				transition: 0.00001s ease;
+				color: gray;
+			}
+		}
+	}
+
+	.title {
+		grid-area: title;
+		margin-left: -35rem;
+	}
+
 	.input {
 		font-family: inherit;
 		text-align: center;
-		margin: 1rem 0;
+		margin: 1rem 0 1rem 12rem;
 		padding: 1rem;
 		border-radius: 50px;
 		border: solid 2px black;
 		outline: none;
 	}
 
+	.user {
+		grid-area: username;
+	}
+
+	.password {
+		grid-area: password;
+	}
+
 	.submit {
+		grid-area: submit;
 		font-family: inherit;
-		background: transparent;
+		background: white;
+		border: none;
+		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 		border-radius: 50px;
-		border: solid 2px black;
-		padding: 0.5rem;
+		padding: 1rem;
 		cursor: pointer;
 		outline: none;
-		margin-left: 33%;
+		margin: 1rem 0 0 15rem;
+
+		&:hover {
+			background: rgb(228, 228, 228);
+		}
 	}
 }
 
