Adds register/;ogin toggler.

--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,7 @@
   background-color: #fdfdfd;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "back title" "username username" "password password" "submit submit";
+      grid-template-areas: "back title toggler" "username username username" "password password password" "submit submit submit";
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -164,13 +164,37 @@
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   grid-area: title;
-  margin-left: -35rem;
+  margin-left: -23rem;
+}
+
+.auth-holder .toggler {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: toggler;
+  background: white;
+  border: none;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 50px;
+  outline: none;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.auth-holder .toggler .button-link {
+  color: black;
+}
+
+.auth-holder .toggler .button-link:hover {
+  -webkit-transition: 0.00001s ease;
+  transition: 0.00001s ease;
+  color: gray;
 }
 
 .auth-holder .input {
   font-family: inherit;
   text-align: center;
-  margin: 1rem 0 1rem 12rem;
+  margin: 1rem 0 1rem 15rem;
   padding: 1rem;
   border-radius: 50px;
   border: solid 2px black;
@@ -180,21 +204,21 @@
 .auth-holder .user {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
+  -ms-grid-column-span: 3;
   grid-area: username;
 }
 
 .auth-holder .password {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
+  -ms-grid-column-span: 3;
   grid-area: password;
 }
 
 .auth-holder .submit {
   -ms-grid-row: 4;
   -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
+  -ms-grid-column-span: 3;
   grid-area: submit;
   font-family: inherit;
   background: white;
@@ -205,7 +229,7 @@
   padding: 1rem;
   cursor: pointer;
   outline: none;
-  margin: 1rem 0 0 15rem;
+  margin: 1rem 0 0 18rem;
 }
 
 .auth-holder .submit:hover {
