--- a/src/App.scss
+++ b/src/App.scss
@@ -103,10 +103,10 @@
 	background-color: rgb(253, 253, 253);
 	display: grid;
 	grid-template-areas:
-		"back title"
-		"username username"
-		"password password"
-		"submit submit";
+		"back title toggler"
+		"username username username"
+		"password password password"
+		"submit submit submit";
 	justify-items: center;
 	align-items: center;
 	position: absolute;
@@ -146,13 +146,33 @@
 
 	.title {
 		grid-area: title;
-		margin-left: -35rem;
+		margin-left: -23rem;
+	}
+
+	.toggler {
+		grid-area: toggler;
+		background: white;
+		border: none;
+		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+		border-radius: 50px;
+		outline: none;
+		padding: 1rem;
+		cursor: pointer;
+
+		.button-link {
+			color: black;
+
+			&:hover {
+				transition: 0.00001s ease;
+				color: gray;
+			}
+		}
 	}
 
 	.input {
 		font-family: inherit;
 		text-align: center;
-		margin: 1rem 0 1rem 12rem;
+		margin: 1rem 0 1rem 15rem;
 		padding: 1rem;
 		border-radius: 50px;
 		border: solid 2px black;
@@ -177,7 +197,7 @@
 		padding: 1rem;
 		cursor: pointer;
 		outline: none;
-		margin: 1rem 0 0 15rem;
+		margin: 1rem 0 0 18rem;
 
 		&:hover {
 			background: rgb(228, 228, 228);
